<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
    <string name="app_name">WalleTx</string>
    <string name="app_confirm_yes">Yes</string>
    <string name="app_confirm_no">Cancel</string>
    <string name="app_btc_currency_label">BTC</string>
    <string name="app_lc_currency_label">USD</string>

    <!-- NAV DRAWER -->
    <string name="navigation_drawer_title_activity_main">WalleTx</string>
    <string name="navigation_drawer_title_my_wallets">My Wallets</string>
    <string name="navigation_drawer_title_wallet_groups">Wallet Groups</string>
    <string name="navigation_drawer_title_tx_catgeories">Tx Categories</string>
    <string name="navigation_drawer_title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MENUS -->
    <string name="menu_action_sync">Sync</string>
    <string name="menu_action_add_wallet">Add new wallet</string>
    <string name="menu_action_add_group">Add new wallet group</string>
    <string name="menu_action_add_tx_category">Add new tx category</string>
    <string name="menu_action_settings">Settings</string>

    <!-- SPLASH Activity -->
    <string name="splash_logo_content_description">Bitcoin WalleTx</string>
    <string name="splash_label">Bitcoin Wallet Tracker</string>

    <!-- WALLETX -->
    <!-- Read -->
        <string name="walletx_main_label_all_wallets_aggreation">All Wallets</string>
        <string name="walletx_main_label_group_placeholder">Wallet Group Name</string>
        <string name="walletx_main_label_wallet_name_placeholder">Wallet Name</string>
        <string name="walletx_main_label_wallet_desc_placeholder">Wallet Description</string>
        <string name="walletx_main_label_empty_bitcoin_balance">0.0</string>
        <string name="walletx_main_label_empty_lc_balance">0.0</string>
        <!-- Create new wallet activity -->


    <string name="walletx_create_activity_title_activity">Add new wallet</string>
    <string-array name="walletx_create_activity_spinner_supported_wallet_types">
        <item>Single address wallet</item>
    </string-array>
    <string name="walletx_create_activity_hint_public_key">Public key</string>
    <string name="walletx_create_activity_content_description_barcode">Scan public key</string>
    <string name="walletx_create_activity_hint_single_address_wallet_name">Wallet name</string>
    <string name="walletx_create_activity_label_group_spinner">Add in group: </string>
    <string name="walletx_create_activity_submit_button">Add Wallet</string>
    <string name="walletx_create_activity_error_invalid_public_key">Oops! Invalid public key</string>
    <string name="walletx_create_activity_error_empty_string">Please provide a name for this wallet.</string>
    <string name="walletx_create_activity_error_existing_public_key">Ooops! That public key already exists!</string>
    <string name="walletx_create_activity_error_existing_name">Oops! Please provide a unique wallet name.</string>


        <!-- Update existing walletx activity -->
        <string name="walletx_update_title_activity">Update wallet</string>
        <string name="walletx_update_hint_name">Name of your wallet</string>
        <string name="walletx_update_label_group_spinner">In group: </string>
        <string name="walletx_update_alert_message_delete">All data associated with this wallet will be removed from device. This action cannot be undone.</string>
        <string name="walletx_update_toast_name_empty">Oops! Wallet name cannot be empty string</string>
        <string name="walletx_update_toast_name_exists">Oops! Wallet name already exists</string>
        <!-- No wallets footer -->
        <string name="walletx_add_first_wallet_l1">You have not added any wallets.</string>
        <string name="walletx_add_first_wallet_l2">Add your first wallet now.</string>

    <!-- WALLETX SUMMARIES -->
    <string name="walletx_summary_all_title_activity">All Wallets Summary</string>
    <string name="walletx_summary_all_title_activity_shortened">All Wallets</string>
    <string name="walletx_summary_group_title_activity">Wallet Group Summary</string>
    <string name="walletx_summary_single_title_activity">Single Walletx Summary</string>
    <!-- Summary modules -->
    <string name="walletx_summary_module_txs_title">Transactions</string>
    <string name="walletx_summary_module_txs_pie_chart_center">Total</string>
    <string name="walletx_summary_module_txs_received">Received</string>
    <string name="walletx_summary_module_txs_sent">Sent</string>

    <!-- WALLETX TXS -->
    <string name="title_activity_walletx_txs_title_activity">Transactions</string>
    <string name="txs_list_header_group_name_placeholder">WalleTx Group Name</string>
    <string name="txs_list_header_txs_placeholder">0</string>
    <string name="txs_list_header_txs_label">Txs</string>
    <string name="txs_list_item_date">Date of tx</string>
    <string name="txs_list_item_category">Uncategorized</string>
    <string name="txs_list_item_amount">0</string>
    <string name="txs_list_item_amount_label">BTC</string>
    <string name="txs_list_item_confirmations">0</string>
    <string name="txs_list_item_confirmations_label">Confirmations</string>
    <string name="walletx_update_activity_error_empty_string">Oops! Name cannot be an empty string</string>
    <string name="walletx_update_activity_error_matches_existing">Oops! That name already exists</string>

    <!-- TX DETAIL -->
    <string name="title_activity_tx_detail">Transaction Details</string>
    <string name="tx_detail_spend_or_received_placeholder">Spent/Received</string>
    <string name="tx_detail_amount_placeholder">0</string>
    <string name="tx_detail_date_placeholder">1 Jan 15</string>
    <string name="tx_detail_auto_complete_tag_hint">Add a tag</string>
    <string name="tx_detail_auto_complete_note_hint">Add a note</string>
    <string name="tx_detail_time_label">Time</string>
    <string name="tx_detail_time_placeholder">00:00 EST</string>
    <string name="tx_detail_conf_label">Confirmations</string>
    <string name="tx_detail_conf_placeholder">0</string>
    <string name="tx_detail_hash_label">Tx ID</string>
    <string name="tx_detail_hash_placeholder">-</string>
    <string name="tx_detail_button_text">View transaction at Blockchain.info</string>

    <!-- GROUP -->
    <string name="group_title_fragment">Wallet Groups</string>
    <string name="group_wtx_default_group">My Wallets</string>
    <string name="group_label_default">(default)</string>
    <string name="group_content_description_up_arrow">Move group name up</string>
    <string name="group_content_description_down_arrow">Move group name down</string>

    <string name="group_create_activity_title_activity">Add New Wallet Group</string>
    <string name="group_create_activity_hint">Wallet group name</string>
    <string name="group_create_activity_checkbox_set_as_default">Set as default group</string>
    <string name="group_create_activity_button_add">Add Wallet Group</string>
    <string name="group_create_activity_error_empty_string">Oops! Group cannot be an empty string</string>
    <string name="group_create_activity_error_matches_existing">Oops! That group already exists</string>

    <string name="group_update_activity_title_activity">Edit Wallet Group</string>
    <string name="group_update_activity_button_update">Update</string>
    <string name="group_update_activity_button_delete">Delete</string>
    <string name="group_update_activity_label_delete_default_group_note">Current default group cannot be deleted. If you wish to remove this group please set another wallet group as the default.</string>
    <string name="group_update_activity_delete_dialog_title_1">Delete group \'</string>
    <string name="group_update_activity_delete_dialog_title_2">\'?</string>
    <string name="group_update_activity_delete_dialog_confirmation">Wallets within this group will automatically be moved to the default group.</string>

    <!-- CATEGORIES -->
    <string name="category_none_present_footer_line_1">You have not added any Tx tag categories.</string>
    <string name="category_none_present_footer_line_2">Add your first tag category now.</string>

    <string name="category_create_activity_title">Add New Tx Category</string>
    <string name="category_create_activity_error_empty_string">Oops! Category cannot be an empty string</string>
    <string name="category_create_activity_error_matches_existing">Oops! That category already exists</string>
    <string name="category_create_activity_hint">Category tag name</string>
    <string name="category_create_activity_submit_button_text">Create tx category</string>

    <string name="category_update_activity_title">Edit Tx Category</string>
    <string name="category_update_activity_delete_dialog_title_1">Delete category \'</string>
    <string name="category_update_activity_delete_dialog_title_2">\'?</string>
    <string name="category_update__activity_delete_dialog_confirmation">Are you sure you wish to delete this Tx tag category? This action cannot be undone.</string>
    <string name="category_update_activity_update_button_text">Update Tx Category</string>
    <string name="category_update_activity_delete_button_text">Delete Tx Category</string>

    <!-- GRAPHS -->
    <string name="title_activity_graph_spending_by_category">Spending By Category</string>
    <string name="title_activity_syncable">SyncableActivity</string>

    <!-- BLOCKCHAIN -->
    <string name="blockchain_error_bad_json_data">Oops! We experienced an issue while syncing your data. Please try again.</string>

</resources>
