<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/singleWalletListItem">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/walletNameContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/walletx_main_label_group_placeholder"
            android:id="@+id/walletName"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/walletx_main_label_wallet_desc_placeholder"
            android:id="@+id/walletDescription"
            android:layout_below="@+id/walletName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/balanceInfo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight=".5"
            android:id="@+id/btcBalanceInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/walletx_main_label_empty_bitcoin_balance"
                android:id="@+id/btcBalance"
                android:layout_alignTop="@+id/btcCurrencyLabel"
                android:layout_toLeftOf="@+id/btcCurrencyLabel"
                android:layout_toStartOf="@+id/btcCurrencyLabel"
                android:layout_marginRight="@dimen/gen_spacer_small"
                android:layout_marginEnd="@dimen/gen_spacer_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_btc_currency_label"
                android:id="@+id/btcCurrencyLabel"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:id="@+id/lcBalanceInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_lc_currency_label"
                android:id="@+id/lcBalance"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/walletx_main_label_empty_lc_balance"
                android:id="@+id/lcLabel"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/lcBalance"
                android:layout_toStartOf="@+id/lcBalance"
                android:layout_marginRight="@dimen/gen_spacer_small"
                android:layout_marginEnd="@dimen/gen_spacer_small"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
