<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_date"
                android:id="@+id/txs_date"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingBottom="@dimen/gen_spacer_xsmall"
                android:textColor="@color/wtx_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_category"
                android:id="@+id/txs_category"
                android:layout_below="@+id/txs_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_amount_label"
                android:id="@+id/txs_amount_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="@dimen/gen_spacer_small"
                android:textStyle="italic"
                android:paddingBottom="@dimen/gen_spacer_xsmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_confirmations_label"
                android:id="@+id/txs_confirmations_label"
                android:layout_below="@+id/txs_amount_label"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="@dimen/gen_spacer_small"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_amount"
                android:id="@+id/txs_amount"
                android:layout_above="@+id/txs_confirmations_label"
                android:layout_toLeftOf="@+id/txs_amount_label"
                android:layout_toStartOf="@+id/txs_amount_label"
                android:paddingBottom="@dimen/gen_spacer_xsmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txs_list_item_confirmations"
                android:id="@+id/txs_confirmations"
                android:layout_alignTop="@+id/txs_confirmations_label"
                android:layout_toLeftOf="@+id/txs_confirmations_label"
                android:layout_toStartOf="@+id/txs_confirmations_label" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>