<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitcoin.tracker.walletx.activity.tx.TxDetailActivity"
    android:id="@+id/main_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/wtx_gray"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/gen_spacer_large"
        android:paddingBottom="@dimen/gen_spacer_large"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tx_detail_spend_or_received_placeholder"
                android:id="@+id/spent_or_received_label"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tx_detail_amount_placeholder"
                android:id="@+id/spent_or_received_amount"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/gen_spacer_small"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/spent_or_received_label"
                android:layout_toEndOf="@+id/spent_or_received_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_btc_currency_label"
                android:id="@+id/spent_or_received_btc"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/spent_or_received_amount"
                android:layout_toEndOf="@+id/spent_or_received_amount"
                android:paddingLeft="@dimen/gen_spacer_small"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tx_detail_date_placeholder"
                android:id="@+id/tx_date"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/wtx_light_gray"
                android:paddingLeft="@dimen/gen_spacer_small" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/gen_spacer_medium"
        android:paddingBottom="@dimen/gen_spacer_medium"
        android:background="@color/wtx_light_gray"
        android:id="@+id/editable_container">

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tagAutoCompleteTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/tx_detail_auto_complete_tag_hint"
            android:focusable="true"
            android:singleLine="true"
            android:inputType="text|textCapSentences"
            android:layout_toLeftOf="@+id/tagImageView"
            android:layout_toStartOf="@+id/tagImageView" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/tagImageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_tag"
            android:layout_alignBottom="@+id/tagAutoCompleteTextView"
            android:layout_marginLeft="@dimen/gen_spacer_xsmall" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editable_container"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/gen_spacer_medium"
        android:paddingBottom="@dimen/gen_spacer_medium"
        android:id="@+id/time_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tx_detail_time_label"
            android:id="@+id/time_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tx_detail_time_placeholder"
            android:id="@+id/time"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/gen_spacer_medium"
        android:paddingBottom="@dimen/gen_spacer_medium"
        android:id="@+id/confirmations_container"
        android:layout_below="@+id/time_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tx_detail_conf_label"
            android:id="@+id/confs_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tx_detail_conf_placeholder"
            android:id="@+id/textView8"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/gen_spacer_medium"
        android:paddingBottom="@dimen/gen_spacer_medium"
        android:id="@+id/button_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/confirmations_container">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_detail_button_text"
            android:id="@+id/blockchain_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:textAlignment="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/background_material_dark"
            android:id="@+id/syncProgressBar" />

    </RelativeLayout>

</RelativeLayout>
