<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/wtx_gray"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/gen_spacer_large"
    android:paddingBottom="@dimen/gen_spacer_large">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txs_list_header_group_name_placeholder"
            android:id="@+id/txs_header_group_name"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txs_list_header_txs_label"
                android:id="@+id/txs_header_count_label"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/wtx_light_gray"
                android:paddingLeft="@dimen/gen_spacer_small"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txs_list_header_txs_placeholder"
                android:id="@+id/txs_header_tx_count"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/txs_header_count_label"
                android:layout_toStartOf="@+id/txs_header_count_label"
                android:textColor="@color/wtx_light_gray" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
